2006-02-28 [wwp]	2.0.0cvs87

	* src/plugins/spamassassin/spamassassin.c
		fix async flag to spamc cmdline execution (batch exec should
		be asynchronous).

2006-02-27 [wwp]	2.0.0cvs86

	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		- added the ability to learn a remote spamassassin server (spamd),
		using spamc.
		- added the spamassassin option 'username', that applies to all
		spamassassin operations (filtering, learning, local or remote).
		The default username is the current unix user (if left blank
		from gtk prefs or config file).
		- commented out some unused code (notebook widget), removed unused
		layout (hbox1).
		- make more widgets sensitive to the transport type.

2006-02-27 [colin]	2.0.0cvs85

	* src/plugins/spamassassin/spamassassin.c
		Fix sa-learn call when offline

2006-02-27 [colin]	2.0.0cvs84

	* configure.ac
	* src/Makefile.am
	* src/mainwindow.c
	* src/mainwindow.h
	* src/messageview.c
	* src/messageview.h
	* src/prefs_toolbar.c
	* src/procmsg.c
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/toolbar.c
	* src/toolbar.h
	* src/pixmaps/ham_btn.xpm
	* src/pixmaps/spam.xpm
	* src/pixmaps/spam_btn.xpm
	* src/plugins/spamassassin/spamassassin.c
		Add button in toolbar for spam learning
		Fix a few bugs from the last related commit
		Revert 1.9.6cvs23 which messed up shift-selection

2006-02-24 [colin]	2.0.0cvs83

	* src/procmsg.c
	* src/summaryview.c
	* src/summaryview.h
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		Unregister learner when spamassassin is either
		disabled or over tcp

2006-02-24 [colin]	2.0.0cvs82

	* src/Makefile.am
	* src/mainwindow.c
	* src/mainwindow.h
	* src/procmsg.c
	* src/procmsg.h
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/icon_legend.c