@@ -1271,3 +1271,4 @@
 ( cvs diff -u -r 1.18.2.20 -r 1.18.2.21 src/plugins/spamassassin/spamassassin.c;  ) > 2.0.0cvs85.patchset
 ( cvs diff -u -r 1.18.2.21 -r 1.18.2.22 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/plugins/spamassassin/spamassassin.h;  cvs diff -u -r 1.23.2.20 -r 1.23.2.21 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 2.0.0cvs86.patchset
 ( cvs diff -u -r 1.18.2.22 -r 1.18.2.23 src/plugins/spamassassin/spamassassin.c;  ) > 2.0.0cvs87.patchset
+( cvs diff -u -r 1.18.2.23 -r 1.18.2.24 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.4.2.8 -r 1.4.2.9 src/plugins/spamassassin/spamassassin.h;  cvs diff -u -r 1.23.2.21 -r 1.23.2.22 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 2.0.0cvs88.patchset
